// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MiniBagBody component isCanada false for Loyalty Banner 1`] = `
<div>
  <div
    className="minibag-viewbag"
  >
    <Styled(Row)
      className="mainWrapper"
    >
      <Styled(Col)
        className="subHeaderText"
        colSize={
          Object {
            "large": 12,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="span"
          fontFamily="primary"
          fontSize="fs12"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        >
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/bag"
            dataLocator="addressbook-makedefault"
            fontSizeVariation="medium"
            onClick={[Function]}
            to="/bag"
            underline={true}
          >
            View bag(1)
          </Styled(Anchor)>
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/bag"
            className="elem-ml-MED"
            data-locator="cartitem-saveforlater"
            fontSizeVariation="medium"
            onClick={[Function]}
            to="/bag?isSfl=true"
            underline={true}
          >
            undefined(undefined)
          </Styled(Anchor)>
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
  </div>
  <Styled(BodyCopy)
    className="viewBagAndProduct"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(Row)
      className="mainWrapper"
    >
      <Styled(Col)
        className="deleteMsg"
        colSize={
          Object {
            "large": 12,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(Image)
          alt="closeIcon"
          className="tick-icon-image"
          height={12}
          src="/static/images/circle-check.png"
          width={12}
        />
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="span"
          fontFamily="secondary"
          fontSize="fs12"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="center"
        />
      </Styled(Col)>
    </Styled(Row)>
    <Connect(ProductTileWrapperContainer)
      onItemEdit={[Function]}
    />
  </Styled(BodyCopy)>
  <div
    className="miniBagFooter"
  >
    <Styled(BodyCopy)
      className="subTotal"
      color="text.primary"
      component="p"
      fontFamily="primary"
      fontSize="fs14"
      fontWeight="semibold"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      tag="span"
      textAlign="left"
    >
      Subtotal: undefined112.00
    </Styled(BodyCopy)>
    <Connect(AddedToBagContainer)
      containerId="paypal-button-container-minibag"
      isEditingItem={false}
      showAddTobag={false}
      showVenmo={false}
    />
    <Connect(AirmilesBannerContainer) />
  </div>
  <Connect(LoyaltyBannerContainer) />
</div>
`;

exports[`MiniBagBody component isCanada true for Loyalty Banner 1`] = `
<div>
  <div
    className="minibag-viewbag"
  >
    <Styled(Row)
      className="mainWrapper"
    >
      <Styled(Col)
        className="subHeaderText"
        colSize={
          Object {
            "large": 12,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="span"
          fontFamily="primary"
          fontSize="fs12"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        >
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/bag"
            dataLocator="addressbook-makedefault"
            fontSizeVariation="medium"
            onClick={[Function]}
            to="/bag"
            underline={true}
          >
            View bag(1)
          </Styled(Anchor)>
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/bag"
            className="elem-ml-MED"
            data-locator="cartitem-saveforlater"
            fontSizeVariation="medium"
            onClick={[Function]}
            to="/bag?isSfl=true"
            underline={true}
          >
            undefined(undefined)
          </Styled(Anchor)>
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
  </div>
  <Styled(BodyCopy)
    className="viewBagAndProduct"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(Row)
      className="mainWrapper"
    >
      <Styled(Col)
        className="deleteMsg"
        colSize={
          Object {
            "large": 12,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(Image)
          alt="closeIcon"
          className="tick-icon-image"
          height={12}
          src="/static/images/circle-check.png"
          width={12}
        />
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="span"
          fontFamily="secondary"
          fontSize="fs12"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="center"
        />
      </Styled(Col)>
    </Styled(Row)>
    <Connect(ProductTileWrapperContainer)
      onItemEdit={[Function]}
    />
  </Styled(BodyCopy)>
  <div
    className="miniBagFooter"
  >
    <Styled(BodyCopy)
      className="subTotal"
      color="text.primary"
      component="p"
      fontFamily="primary"
      fontSize="fs14"
      fontWeight="semibold"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      tag="span"
      textAlign="left"
    >
      Subtotal: undefined112.00
    </Styled(BodyCopy)>
    <Connect(AddedToBagContainer)
      containerId="paypal-button-container-minibag"
      isEditingItem={false}
      showAddTobag={false}
      showVenmo={false}
    />
    <Connect(AirmilesBannerContainer) />
  </div>
</div>
`;

exports[`MiniBagBody component renders main component correctly 1`] = `
<div>
  <div
    className="minibag-viewbag"
  >
    <Styled(Row)
      className="mainWrapper"
    >
      <Styled(Col)
        className="subHeaderText"
        colSize={
          Object {
            "large": 12,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="span"
          fontFamily="primary"
          fontSize="fs12"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        >
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/bag"
            dataLocator="addressbook-makedefault"
            fontSizeVariation="medium"
            onClick={[Function]}
            to="/bag"
            underline={true}
          >
            View bag(1)
          </Styled(Anchor)>
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/bag"
            className="elem-ml-MED"
            data-locator="cartitem-saveforlater"
            fontSizeVariation="medium"
            onClick={[Function]}
            to="/bag?isSfl=true"
            underline={true}
          >
            undefined(undefined)
          </Styled(Anchor)>
        </Styled(BodyCopy)>
      </Styled(Col)>
    </Styled(Row)>
  </div>
  <Styled(BodyCopy)
    className="viewBagAndProduct"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(Row)
      className="mainWrapper"
    >
      <Styled(Col)
        className="deleteMsg"
        colSize={
          Object {
            "large": 12,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(Image)
          alt="closeIcon"
          className="tick-icon-image"
          height={12}
          src="/static/images/circle-check.png"
          width={12}
        />
        <Styled(BodyCopy)
          className={null}
          color="text.primary"
          component="span"
          fontFamily="secondary"
          fontSize="fs12"
          fontWeight="extrabold"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="center"
        />
      </Styled(Col)>
    </Styled(Row)>
    <Connect(ProductTileWrapperContainer)
      onItemEdit={[Function]}
    />
  </Styled(BodyCopy)>
  <div
    className="miniBagFooter"
  >
    <Styled(BodyCopy)
      className="subTotal"
      color="text.primary"
      component="p"
      fontFamily="primary"
      fontSize="fs14"
      fontWeight="semibold"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      tag="span"
      textAlign="left"
    >
      Subtotal: undefined112.00
    </Styled(BodyCopy)>
    <Connect(AddedToBagContainer)
      containerId="paypal-button-container-minibag"
      isEditingItem={false}
      showAddTobag={false}
      showVenmo={false}
    />
    <Connect(AirmilesBannerContainer) />
  </div>
  <Connect(LoyaltyBannerContainer) />
</div>
`;
